# logger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: appenders.hpp  colours.hpp  init.hpp  log.hpp  logger.hpp  macro.hpp  record.hpp  severity.hpp  utils.hpp
include/appenders/: appender_interface.hpp  console_appender.hpp  file_appender.hpp
include/formatters/: formatter_interface.hpp  formatters_types.hpp  func_msg_formatter.hpp  json_formatter.hpp  just_msg_formatter.hpp  only_msg_formatter.hpp  text_formatter.hpp
include/logger/: colours.hpp  init.hpp  log.hpp  logger.hpp  record.hpp  severity.hpp  utils.hpp
include/logger/appenders/: appender_interface.hpp  console_appender.hpp  file_appender.hpp
include/logger/formatters/: func_msg_formatter.hpp  json_formatter.hpp  only_msg_formatter.hpp  text_formatter.hpp
include/logger/initializers/: console_appender_initializer.hpp  file_appender_initializer.hpp
log/: log.txt
src/: handler.cpp  handler.hpp  main.cpp
